homework/03/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw03-service
spec:
  type: NodePort
  selector:
    app: otus-hw03-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
