homework/03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-hw03-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/kovalevas/?(.*)($|/)
          pathType: ImplementationSpecific
          backend:
            service:
              name: otus-hw03-service
              port: 
                number: 8000
        - path: /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: otus-hw03-service
              port: 
                number: 8000
